another fix on mobile view

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono&family=Ubuntu:wght@300;400;500;700&display=swap');
 
 html {
   height: 2000px;
@@ -9,6 +10,10 @@ body {
   color: rgb(238, 238, 238);
   box-sizing: border-box;
   margin: 0px;
+}
+
+:root {
+  --size-scaler: 1;
 }
 
 header {
@@ -36,10 +41,11 @@ ul {
 
 .featured {
   height: 100vh;
+  width: 100vw;
   background-image: linear-gradient(
-      to right,
-      rgba(10, 8, 11, 0.6) 60%,
-      rgba(102, 81, 76, 0.6)
+      to bottom,
+      rgba(102, 81, 76, 0.9),
+      rgba(10, 8, 11, 0.8) 70%
     ),
     url('media/images/code-1.jpg');
   background-size: cover;
@@ -51,37 +57,54 @@ ul {
 }
 
 .intro {
-  background-color: rgba(10, 8, 11, 0.7);
+  background-color: rgba(10, 8, 11, 0);
   display: flex;
   flex-direction: column-reverse;
   justify-content: center;
   align-items: center;
-  max-height: 100vh;
-  padding: 1em;
-}
-
-.img-container {
+  height: 100vh;
+  width: 100vw;
 }
 
 .img-container img {
-  max-width: 16em;
+  max-width: calc(18em * var(--size-scaler));
   border-radius: 50% 50%;
   border: 5px solid rgb(238, 238, 238);
 }
 
 .statement {
   text-align: center;
+  padding: 0 2em;
 }
 
 .statement h1 {
-  font-size: 2em;
+  font-size: calc(3em * var(--size-scaler));
+  font-weight: 400px;
+  margin-bottom: 0.5em;
+  padding-bottom: 0.3em;
+  border-bottom: 3px solid white;
 }
 
 .statement p {
-  font-size: 2em;
+  font-size: calc(1.5em * var(--size-scaler));
+  margin-top: 0;
+}
+
+.code {
+  font-family: 'Ubuntu Mono', monospace;
+}
+
+.statement > p > span {
+  font-size: calc(2em * var(--size-scaler));
 }
 
 /* Media Queries */
+
+@media (max-width: 500px) {
+  :root {
+    --size-scaler: 0.7;
+  }
+}
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media (min-width: 992px) {
@@ -110,6 +133,4 @@ ul {
     text-align: right;
     min-height: 22em;
   }
-
-  
 }
